# blog-backend

./: .env.local  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
scripts/: build_lambda.sh  integration_test.sh
src/admin/: handler.py
src/admin/routes/: blog.py  leetcode.py  playbook.py  upload.py
src/shared/: auth.py  config.py  db.py  models.py  s3.py
tests/: conftest.py  test_blog.py  test_integration.py  test_playbook.py
